# filter-image-android

./: .gitignore  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/pwhs/cnative/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/pwhs/cnative/: ImageProcessor.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/pwhs/cnative/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
